# pysal

./: .build-osx10.6-py26.sh  .build-osx10.6-py27.sh  .build-osx10.7-py27.sh  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .runTests.sh  .travis.yml  .travis_testing.sh  AUTHORS.txt  CHANGELOG.md  CHANGELOG.txt  CHANGES.txt  CODE_OF_CONDUCT.md  CoC_reporting.md  ESDA Overview.ipynb  INSTALL  INSTALL.TXT  INSTALL.txt  LICENSE.txt  MANIFEST  MANIFEST.in  MIGRATING.md  Makefile  Overview.ipynb  Polymorphic Weights.ipynb  README  README.md  README.rst  README.txt  THANKS.txt  TODO  TODO.TXT  Vagrantfile  WKT_Reprs.ipynb  api.html  appveyor.yml  asShape_test.ipynb  build.md  (+50 more)
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_docs.yml  prerelease.yml  publish.yml  release_and_publish.yml  testing.yml  unittests.yml
_sources/: api.rst.txt  installation.rst.txt
_static/: documentation_options.js
_static/auto/: references.el
ci/: 310-latest.yaml  310-oldest.yaml  311-latest.yaml  312-dev.yaml  312-latest.yaml  313-dev.yaml  313-latest.yaml  314-dev.yaml  314-latest.yaml  36-latest-conda-forge.yaml  36.yml  37.yml  38.yml
ci/travis/: 36-latest-conda-forge.yaml  37-latest-conda-forge.yaml  38-latest-conda-forge.yaml
doc/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat
doc/_static/: pysal-styles.css  references.bib
doc/source/: conf.py  contents.rst  contents.txt  examples.rst  funding.rst  index.rst  index.txt  intro.rst  library.rst  license.rst  news.rst  references.rst  tutorials.rst  weights.rst
docs/: .buildinfo  Makefile  api.html  api.rst  conf.py  genindex.html  index.html  index.rst  installation.html  installation.rst  objects.inv  references.html  releases.html  releases.rst  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: api.rst.txt  index.rst.txt  installation.rst.txt
docs/_static/: bootstrap-sphinx.css  documentation_options.js  references.bib
docsrc/: Makefile  api.rst  conf.py  index.rst  libpysal-inv.txt  releases.rst
pysal/: COPYING  __init__.py  _version.py  api.py  base.py  check.py  common.py  config.py  frozen.py  test_NameSpace.py  test_check.py  version.py
pysal/cg/: __init__.py  collection.py  comparators.py  kdtree.py  locators.py  rtree.py  segmentLocator.py  shapes.py  sphere.py  standalone.py
pysal/contrib/: README  README.rst  clusterpy.ipynb  clusterpy_ext.py  shapely_ext.py  shared_perimeter_weights.py
pysal/core/: FileIO.py  Tables.py  WKB.ipynb  __init__.py
pysal/dynamics/: README.md
pysal/econometrics/: __init__.py  classic.py  speconometrics.py
pysal/esda/: __init__.py  _doc_templates.py  _new_new.py  fast_geary.pyx  gamma.py  geary.py  getisord.py  headbang.py  interaction.py  jacquez.py  join_counts.py  mapclassify.py  mixture_smoothing.py  moran.py  smoothing.py  spatial_lag.py  tabular.py  util.py
pysal/examples/: Chicago77.shx  Point.dbf  README  README.txt  __init__.py  baltim.dbf  baltim_q.gal  burkitt.dbf  burkitt.shp  calempdensity.csv  columbus.gal  columbus.shx  desmith.txt  eberly_net.shx  eberly_net_pts_offnetwork.dbf  eberly_net_pts_offnetwork.shp  eberly_net_pts_offnetwork.shx  eberly_net_pts_onnetwork.shp  examples.txt  juvenile.shp  lattice10x10.shp  nat_queen.gal  nat_queen_old.gal  natregimes.dbf  newhaven_network.shx  sample.wkt  (+24 more)
pysalnext/: .gitignore  __init__.py
tools/: 100-gitcount.ipynb  110-gitcount-tables.ipynb  ExtractFuncs_Docs.ipynb  Makefile  README.md  build.py  bump.py  change_log.py  changelog.md  cron.py  docs.sh  frozen.ipynb  frozen.py  gitcount-tables.ipynb  gitcount.ipynb  gitcount.py  github_stats.py  gitreleases.py  history.ipynb  package_releases.py  release.py  release.yaml  release_info.py  spregsync  test.sh
(+2545 files in other folders)
